package Bomber.Entity;

public enum facingDirection {
    EAST, WEST, NORTH, SOUTH, STATIONARY, ALL
}
